force-app/main/default/objects/Order/fields/Aditivo_de_Comodato__c.field-meta.xml
<CustomField>
    <fullName>Aditivo_de_Comodato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aditivo de Comodato</label>
    <referenceTo>Aditivo_de_Comodato__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>