force-app/main/default/objects/Order/fields/Agendado__c.field-meta.xml
<CustomField>
    <fullName>Agendado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agendado</label>
    <type>Checkbox</type>
</CustomField>