force-app/main/default/objects/Order/fields/Al_quota_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Al_quota_Vendedor__c</fullName>
    <label>Alíquota Customizada (Vendedor)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>