force-app/main/default/objects/Order/fields/aliquota_variavel_vendedor__c.field-meta.xml
<CustomField>
    <fullName>aliquota_variavel_vendedor__c</fullName>
    <inlineHelpText>Preencha caso a comissão da venda atual não seja a padrão definida para o vendedor.</inlineHelpText>
    <label>Alíquota variável (vendedor)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>