force-app/main/default/objects/Order/fields/Assinatura_Cliente_Envio__c.field-meta.xml
<CustomField>
    <fullName>Assinatura_Cliente_Envio__c</fullName>
    <label>Assinatura Cliente Envio</label>
    <type>Url</type>
</CustomField>