force-app/main/default/objects/Order/fields/Assinatura_Cliente_Retorno__c.field-meta.xml
<CustomField>
    <fullName>Assinatura_Cliente_Retorno__c</fullName>
    <label>Assinatura Cliente Retorno</label>
    <type>Url</type>
</CustomField>