force-app/main/default/objects/Order/fields/Assinatura_Hospcom_Envio__c.field-meta.xml
<CustomField>
    <fullName>Assinatura_Hospcom_Envio__c</fullName>
    <label>Assinatura Hospcom Envio</label>
    <type>Url</type>
</CustomField>