force-app/main/default/objects/Order/fields/Assinatura_Hospcom_Retorno__c.field-meta.xml
<CustomField>
    <fullName>Assinatura_Hospcom_Retorno__c</fullName>
    <label>Assinatura Hospcom Retorno</label>
    <type>Url</type>
</CustomField>