force-app/main/default/objects/Order/fields/Autoriza_o_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_o_de_Pagamento__c</fullName>
    <label>Autorização de Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>