force-app/main/default/objects/Order/fields/bandeira_comprovante__c.field-meta.xml
<CustomField>
    <fullName>bandeira_comprovante__c</fullName>
    <description>bandeira do comprovante de pagamento</description>
    <inlineHelpText>bandeira do comprovante de pagamento</inlineHelpText>
    <label>Nome da Bandeira</label>
    <length>100</length>
    <type>Text</type>
</CustomField>