force-app/main/default/objects/Order/fields/Canal_de_venda__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_venda__c</fullName>
    <formula>TEXT(Opportunity.Canal_de_venda__c) + IF(!ISBLANK(TEXT(Opportunity.Plano_de_sa_de__c)), &apos; - &apos; + TEXT(Opportunity.Plano_de_sa_de__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de venda</label>
    <type>Text</type>
</CustomField>