force-app/main/default/objects/Order/fields/Chave_de_Clone__c.field-meta.xml
<CustomField>
    <fullName>Chave_de_Clone__c</fullName>
    <description>Campo criado para controle de pedidos clonados</description>
    <inlineHelpText>Campo criado para controle de pedidos clonados</inlineHelpText>
    <label>Chave de Clone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>