force-app/main/default/objects/Order/fields/Checklist_Retorno_Assinado__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Retorno_Assinado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Retorno Assinado</label>
    <type>Checkbox</type>
</CustomField>