force-app/main/default/objects/Order/fields/checkTemp__c.field-meta.xml
<CustomField>
    <fullName>checkTemp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkTemp</label>
    <type>Checkbox</type>
</CustomField>