force-app/main/default/objects/Order/fields/Cliente_inadimplente__c.field-meta.xml
<CustomField>
    <fullName>Cliente_inadimplente__c</fullName>
    <formula>Quote.Cliente_inadimplente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente inadimplente</label>
    <type>Checkbox</type>
</CustomField>