force-app/main/default/objects/Order/fields/Cliente_responsavel_pelo_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Cliente_responsavel_pelo_recebimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preencha quem ficará responsável por receber o equipamento no dia da instalação</inlineHelpText>
    <label>Cliente responsável no dia da instalação</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos (Cliente responsável pelo recebimento)</relationshipLabel>
    <relationshipName>Pedidos7</relationshipName>
    <type>Lookup</type>
</CustomField>