force-app/main/default/objects/Order/fields/CNPJ_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_Faturamento__c</fullName>
    <formula>Faturamento_Feito__r.CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ Faturamento</label>
    <type>Text</type>
</CustomField>