force-app/main/default/objects/Order/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paciente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos (Paciente)</relationshipLabel>
    <relationshipName>Pedidos4</relationshipName>
    <type>Lookup</type>
</CustomField>