force-app/main/default/objects/Order/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <formula>IF(Contrato_de_Servi_o__c != null &amp;&amp;  Contrato_de_Servi_o__r.RecordTypeId = &apos;0125A000001Qydf&apos; , &quot;Locação&quot;, 
 IF(Ordem_de_trabalho__c != null || Contrato_de_Servi_o__r.RecordTypeId = &apos;0125A000001QydL&apos;, &quot;Serviços&quot;,
&quot;Venda&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrato:</label>
    <type>Text</type>
</CustomField>