force-app/main/default/objects/Order/fields/Contrato_de_Fornecimento_de_Insumo__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Fornecimento_de_Insumo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Fornecimento de Insumo</label>
    <referenceTo>Contrato_de_Fornecimento_de_Insumo__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>