force-app/main/default/objects/Order/fields/Contrato_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servi_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Serviço</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>