force-app/main/default/objects/Order/fields/Convenio__c.field-meta.xml
<CustomField>
    <fullName>Convenio__c</fullName>
    <formula>TEXT(Opportunity.Plano_de_sa_de__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convênio</label>
    <type>Text</type>
</CustomField>