force-app/main/default/objects/Order/fields/CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPF_CNPJ__c</fullName>
    <formula>IF(
    Account.RecordType.Name == &quot;Conta pessoal&quot;,
    Account.CPF__pc,
    Account.CNPJ__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF/CNPJ</label>
    <type>Text</type>
</CustomField>