force-app/main/default/objects/Order/fields/Data_da_ativacao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_ativacao__c</fullName>
    <formula>Inicio_Ativo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da ativação</label>
    <type>Date</type>
</CustomField>