force-app/main/default/objects/Order/fields/Data_da_demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_demonstracao__c</fullName>
    <label>Data da demonstração</label>
    <type>Date</type>
</CustomField>