force-app/main/default/objects/Order/fields/Data_De_Alerta_para_o_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Data_De_Alerta_para_o_Faturamento__c</fullName>
    <label>Data de Alerta para o Faturamento</label>
    <type>Date</type>
</CustomField>