force-app/main/default/objects/Order/fields/Data_de_aprova_o_do_PV__c.field-meta.xml
<CustomField>
    <fullName>Data_de_aprova_o_do_PV__c</fullName>
    <label>Data de aprovação do PV</label>
    <type>Date</type>
</CustomField>