force-app/main/default/objects/Order/fields/Data_de_ativacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_ativacao__c</fullName>
    <formula>IF(RecordTypeId= &apos;0125A000001dyU3&apos;,  DATEVALUE(CreatedDate),  DATEVALUE(Inicio_Ativo__c ))</formula>
    <label>Data de ativação</label>
    <type>Date</type>
</CustomField>