force-app/main/default/objects/Order/fields/Data_de_cria_o_2__c.field-meta.xml
<CustomField>
    <fullName>Data_de_cria_o_2__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de criação 2</label>
    <type>Date</type>
</CustomField>