force-app/main/default/objects/Order/fields/Data_de_Entrega2__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Entrega2__c</fullName>
    <label>Data de Entrega</label>
    <type>Date</type>
</CustomField>