force-app/main/default/objects/Order/fields/Data_de_Entrega3__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Entrega3__c</fullName>
    <formula>Data_de_Entrega2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Entrega*</label>
    <type>Date</type>
</CustomField>