force-app/main/default/objects/Order/fields/Data_de_Entrega_2__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Entrega_2__c</fullName>
    <formula>EndDate</formula>
    <label>_Data de entrega (clone) (del)</label>
    <type>Date</type>
</CustomField>