force-app/main/default/objects/Order/fields/Data_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Data_de_entrega__c</fullName>
    <inlineHelpText>Da Hospcom ao Cliente, maior data dentre os itens.</inlineHelpText>
    <label>_Data de entrega (del)</label>
    <summarizedField>OrderItem.Data_de_entrega__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>