force-app/main/default/objects/Order/fields/Data_de_pagamento_da_entrada__c.field-meta.xml
<CustomField>
    <fullName>Data_de_pagamento_da_entrada__c</fullName>
    <formula>IF(TEXT(Quote.Tem_entrada__c) == &apos;Sim&apos;, Quote.Data_da_entrada__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de pagamento da entrada</label>
    <type>Date</type>
</CustomField>