force-app/main/default/objects/Order/fields/Data_de_termino__c.field-meta.xml
<CustomField>
    <fullName>Data_de_termino__c</fullName>
    <formula>dataTerminoDemonstracao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de término*</label>
    <type>Date</type>
</CustomField>