force-app/main/default/objects/Order/fields/Data_de_Vencimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Vencimento__c</fullName>
    <description>data de vencimento do pedido</description>
    <inlineHelpText>data de vencimento do pedido</inlineHelpText>
    <label>Data de Vencimento</label>
    <type>Date</type>
</CustomField>