force-app/main/default/objects/Order/fields/Data_do_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Pagamento__c</fullName>
    <inlineHelpText>Este campo deve ser preenchido apenas quando o pagamento for antecipado.</inlineHelpText>
    <label>Data do Pagamento</label>
    <type>Date</type>
</CustomField>