force-app/main/default/objects/Order/fields/Data_do_pedido_2__c.field-meta.xml
<CustomField>
    <fullName>Data_do_pedido_2__c</fullName>
    <formula>Data_do_pedido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do pedido 2</label>
    <type>Date</type>
</CustomField>