force-app/main/default/objects/Order/fields/Data_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Data_do_pedido__c</fullName>
    <formula>IF( YEAR(DATEVALUE(CreatedDate)) &lt; 2022,  EffectiveDate, Data_de_ativacao__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do pedido*</label>
    <type>Date</type>
</CustomField>