force-app/main/default/objects/Order/fields/dataTerminoDemonstracao__c.field-meta.xml
<CustomField>
    <fullName>dataTerminoDemonstracao__c</fullName>
    <label>Data de Término da Demonstração</label>
    <type>Date</type>
</CustomField>