force-app/main/default/objects/Order/fields/Demo_Clausula10__c.field-meta.xml
<CustomField>
    <fullName>Demo_Clausula10__c</fullName>
    <label>Demo_Clausula10</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>