force-app/main/default/objects/Order/fields/Demo_Clausula13Editada__c.field-meta.xml
<CustomField>
    <fullName>Demo_Clausula13Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo_Clausula13Editada</label>
    <type>Checkbox</type>
</CustomField>