force-app/main/default/objects/Order/fields/Demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Demonstracao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Comodato</label>
    <referenceTo>Demonstracao__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>