force-app/main/default/objects/Order/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>_Departamento (del)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Governo</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>