force-app/main/default/objects/Order/fields/Descricao_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Descricao_de_pagamento__c</fullName>
    <label>_Descrição de pagamento (del)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>