force-app/main/default/objects/Order/fields/DocEntrySap__c.field-meta.xml
<CustomField>
    <fullName>DocEntrySap__c</fullName>
    <description>Docentry da nota fiscal do sap</description>
    <inlineHelpText>Docentry da nota fiscal do sap</inlineHelpText>
    <label>DocEntrySap</label>
    <length>50</length>
    <type>Text</type>
</CustomField>