force-app/main/default/objects/Order/fields/E_mail_Contato__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Contato__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>