force-app/main/default/objects/Order/fields/E_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>E_Vendedor__c</fullName>
    <formula>IF(Vendedor__c == $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É Vendedor</label>
    <type>Checkbox</type>
</CustomField>