force-app/main/default/objects/Order/fields/Enderecos_diferentes__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_diferentes__c</fullName>
    <formula>OR(
BillingStreet != ShippingStreet,
BillingCity != ShippingCity,
BillingState != ShippingState,
BillingPostalCode != ShippingPostalCode
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereços diferentes</label>
    <type>Checkbox</type>
</CustomField>