force-app/main/default/objects/Order/fields/Entrega_liberada_pelo_financeiro__c.field-meta.xml
<CustomField>
    <fullName>Entrega_liberada_pelo_financeiro__c</fullName>
    <label>Entrega liberada pelo financeiro</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Natureza_de_Opera_o__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
                <default>true</default>
                <label>NÃO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>