force-app/main/default/objects/Order/fields/Entrega_parcial__c.field-meta.xml
<CustomField>
    <fullName>Entrega_parcial__c</fullName>
    <label>Entrega parcial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autorizada</fullName>
            </value>
            <value>
                <fullName>Não Autorizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>