force-app/main/default/objects/Order/fields/Entrega_Parcial_Autorizada__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Parcial_Autorizada__c</fullName>
    <label>_Entrega parcial (del)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autorizada</fullName>
            </value>
            <value>
                <fullName>Não Autorizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>