force-app/main/default/objects/Order/fields/Evento_da_Opp__c.field-meta.xml
<CustomField>
    <fullName>Evento_da_Opp__c</fullName>
    <formula>Opportunity.CampaignId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evento da Opp</label>
    <type>Text</type>
</CustomField>