force-app/main/default/objects/Order/fields/Falta_Faturar__c.field-meta.xml
<CustomField>
    <fullName>Falta_Faturar__c</fullName>
    <formula>TotalAmount  - Total_Faturado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Falta Faturar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>