force-app/main/default/objects/Order/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <type>TextArea</type>
</CustomField>