force-app/main/default/objects/Order/fields/Fatura__c.field-meta.xml
<CustomField>
    <fullName>Fatura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>pedido da fatura</inlineHelpText>
    <label>Fatura</label>
    <referenceTo>Fatura_de_adiantamento__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>