force-app/main/default/objects/Order/fields/Faturado__c.field-meta.xml
<CustomField>
    <fullName>Faturado__c</fullName>
    <formula>IF(
	AND(TotalAmount == 0,Total_Faturado__c==0, OR(Quantidade_de_faturamentos__c == null, Quantidade_de_faturamentos__c == 0)),
	0,
	IF(AND(TotalAmount == 0, Quantidade_de_faturamentos__c &gt;= 1), 1,

        (Total_Faturado__c / TotalAmount))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faturado (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>