force-app/main/default/objects/Order/fields/Faturamento_Feito__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Feito__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Empresa do grupo Hospcom que irá faturar o pedido.</inlineHelpText>
    <label>Faturamento feito</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos Feitos (de pedidos)</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>