force-app/main/default/objects/Order/fields/Final_Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Final_Aprovado__c</fullName>
    <label>Final Aprovado</label>
    <type>DateTime</type>
</CustomField>