force-app/main/default/objects/Order/fields/Final_At_Ent_Parcial__c.field-meta.xml
<CustomField>
    <fullName>Final_At_Ent_Parcial__c</fullName>
    <label>Final At/Ent Parcial</label>
    <type>DateTime</type>
</CustomField>