force-app/main/default/objects/Order/fields/Final_Em_Andamento__c.field-meta.xml
<CustomField>
    <fullName>Final_Em_Andamento__c</fullName>
    <label>Final Em Andamento</label>
    <type>DateTime</type>
</CustomField>