force-app/main/default/objects/Order/fields/Final_Entregue_Total__c.field-meta.xml
<CustomField>
    <fullName>Final_Entregue_Total__c</fullName>
    <label>Final Entregue Total</label>
    <type>DateTime</type>
</CustomField>