force-app/main/default/objects/Order/fields/FinalAgAprovComercial__c.field-meta.xml
<CustomField>
    <fullName>FinalAgAprovComercial__c</fullName>
    <label>Final Ag Aprov Comercial</label>
    <type>DateTime</type>
</CustomField>