force-app/main/default/objects/Order/fields/FinalAgAprovFinanceira__c.field-meta.xml
<CustomField>
    <fullName>FinalAgAprovFinanceira__c</fullName>
    <label>Final Ag Aprov Financeira</label>
    <type>DateTime</type>
</CustomField>