force-app/main/default/objects/Order/fields/Forma_de_pagamento2__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento2__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Natureza_de_Opera_o__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Formas_de_pagamento</valueSetName>
    </valueSet>
</CustomField>