force-app/main/default/objects/Order/fields/Forma_de_pagamento_SAP__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento_SAP__c</fullName>
    <formula>IF(TEXT(Forma_de_pagamento2__c) != &apos;Boleto Bancário&apos;,  TEXT(Forma_de_pagamento2__c), 
IF(Faturamento_Feito__c == &apos;001i00000085QYb&apos;, Boleto_Option__c , 
IF(Faturamento_Feito__c == &apos;0015A00002SZiBc&apos;, &apos;Cob. Boleto - Banco do Brasil - Ag: 1242-4 Cc: 48068-1 - ABC&apos;,
IF(Faturamento_Feito__c == &apos;0015A00001yGbVZ&apos;, &apos;Cob. Boleto - Banco do Brasil - Ag: 1610-1 Cc: 128057-0 - GDB&apos;,
&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forma de pagamento SAP</label>
    <type>Text</type>
</CustomField>