force-app/main/default/objects/Order/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <formula>IF(QuoteId != null, &apos;Equipamentos: &apos; + Quote.Prazo_de_garantia_dos_equipamentos__c + &apos;, Acessórios: &apos; + Quote.Prazo_de_garantia_acessorios__c, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garantia</label>
    <type>Text</type>
</CustomField>