force-app/main/default/objects/Order/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>