force-app/main/default/objects/Order/fields/Gerente_regional__c.field-meta.xml
<CustomField>
    <fullName>Gerente_regional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente regional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos5</relationshipName>
    <type>Lookup</type>
</CustomField>