force-app/main/default/objects/Order/fields/Horas_teis_em_Rascunho__c.field-meta.xml
<CustomField>
    <fullName>Horas_teis_em_Rascunho__c</fullName>
    <formula>10 * (
( 5 * FLOOR( ( DATEVALUE(  Final_Rascunho__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Final_Rascunho__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 10 * ( MOD( Final_Rascunho__c- DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE(  CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 10 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1) ) )
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Úteis em Rascunho</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>