force-app/main/default/objects/Order/fields/Horas_Uteis_Ag_Apr_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Horas_Uteis_Ag_Apr_Comercial__c</fullName>
    <formula>10 * (
( 5 * FLOOR( ( DATEVALUE(  FinalAgAprovComercial__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( FinalAgAprovComercial__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 10 * ( MOD( FinalAgAprovComercial__c - DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE(  InicioAgAprovComercial__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( InicioAgAprovComercial__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 10 * ( MOD( InicioAgAprovComercial__c - DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1) ) )
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Úteis Ag Apr Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>