force-app/main/default/objects/Order/fields/hospital_opme__c.field-meta.xml
<CustomField>
    <fullName>hospital_opme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Hospital)</relationshipLabel>
    <relationshipName>Pedidos2</relationshipName>
    <type>Lookup</type>
</CustomField>