force-app/main/default/objects/Order/fields/ID_da_conta__c.field-meta.xml
<CustomField>
    <fullName>ID_da_conta__c</fullName>
    <label>ID da conta*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>