force-app/main/default/objects/Order/fields/id_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>id_do_pedido__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id_do_pedido</label>
    <type>Text</type>
</CustomField>