force-app/main/default/objects/Order/fields/idDocAutentique__c.field-meta.xml
<CustomField>
    <fullName>idDocAutentique__c</fullName>
    <label>idDocAutentique</label>
    <type>TextArea</type>
</CustomField>