force-app/main/default/objects/Order/fields/Ignora_validacao__c.field-meta.xml
<CustomField>
    <fullName>Ignora_validacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignora validação</label>
    <type>Checkbox</type>
</CustomField>