force-app/main/default/objects/Order/fields/Igual__c.field-meta.xml
<CustomField>
    <fullName>Igual__c</fullName>
    <formula>Vendedor__r.Id = Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Igual</label>
    <type>Checkbox</type>
</CustomField>